--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-size: 20px;
 }
 
 /* title */
@@ -86,12 +86,14 @@
 .category .container{
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .category .container .cateContent{
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
+
 }
 
 .category .container .cateContent .cateItem{
@@ -151,6 +153,8 @@
 .feedback .container .row{
   display: flex;
   flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 .feedback .container .feedText{
@@ -192,4 +196,40 @@
 .feedback .container .feedContent .feedName p{
   font-size: 13px;
   color: #707070;
+}
+
+@media (min-width: 992px) {
+  .container {
+    margin-right: auto;
+    margin-left: auto;
+}
+  .feedback .container{
+    width: 100%;
+  }
+}
+
+/* Kiểu cho màn hình tablet (từ 768px đến 991px) */
+@media (min-width: 768px) and (max-width: 991px) {
+  .number .container .numContent .numCount{
+    border-right: 0;
+  }
+  .feedback .container{
+    width: 100%;
+  }
+  .feedback .container .row{
+    justify-content: center;
+  }
+  .welcome .container .stuItem .row {
+    justify-content: center;
+  }
+}
+
+/* Kiểu cho màn hình mobile (nhỏ hơn 768px) */
+@media (max-width: 768px) {
+  .number .container .numContent .numCount{
+    border-right: 0;
+  }
+  .welcome .container .stuItem .row {
+    justify-content: center;
+  }
 }
